took 5 hours and an extension but the issue of alignment is  finally fixed.

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,7 +35,7 @@
 
 .modal__container_type_preview {
   padding: 0;
-  margin: auto;
+  margin: 0 auto;
   background: none;
   display: flex;
   flex-direction: column;
@@ -44,8 +44,9 @@
   font-size: 20px;
   line-height: 24px;
   border-radius: 8px;
+  width:auto;
+  max-width: 100vw;
 }
-/*could use a suggestion here, I have tried most displays and position but cannot get the card to show as centered for the preview modal.*/
 
 .modal__image {
   max-width: 80vw;
@@ -66,7 +67,7 @@
 }
 
 .modal__close-button_type_preview {
-  background: url("../images/previewclose.svg");
+  background: url("../images/previewclose.svg") center no-repeat;
   opacity: 1;
   position: static;
   margin: 0;
@@ -117,8 +118,6 @@
 }
 
 .modal__caption {
-  top: 750px;
-  left: 223px;
   padding: 4px 12px 4px 8px;
   border-radius: 8px;
   background: rgba(33, 33, 33, 1);
@@ -126,8 +125,7 @@
   font-size: 20px;
   line-height: 24px;
   margin-top: 8px;
-  display: inline-block;
-  align-self: flex-start;
+  width: fit-content;
 }
 
 .modal__input:hover {
@@ -170,6 +168,8 @@
 
   .modal__close-button_type_preview{
     align-self: flex-end;
+    padding: 0px;
+    margin: 0px;
   }
 
   .modal__label {
@@ -187,7 +187,9 @@
   }
 
   .modal__container_type_preview {
+    width: 100%;
     display: flex;
+    padding: 0px;
   }
 
   .modal__caption {
@@ -202,9 +204,10 @@
 
   .modal__row-container {
     flex-direction: column-reverse;
+    width: 100%;
   }
 
   .modal__image {
-    width: 100vw;
+    max-width: 90vw;
   }
 }
